# x402

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
Contracts/: Prism.sol
Signer/: payload.json
legacy/: README.md
legacy/Contracts/: README.md  Stargate.sol
legacy/Docs/: facilitator_guide.md
legacy/Signer/: payload.json
legacy/sdk/: LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  payee.js  payer.js  signer.js  utils.js
legacy/sdk/examples/: basic-payment.js
legacy/tools/: README.md  approve.env.example  approve.js  signer.env.example  signer.js
openclaw/: SKILL.md  _meta.json
openclaw/ClawHub/xClaw02/: SKILL.md  _meta.json
openclaw/xClaw02/sdk-python/: README.md  pyproject.toml
openclaw/xClaw02/sdk-python/tests/: __init__.py  test_payee.py  test_payer.py  test_signer.py  test_testing.py  test_utils.py
openclaw/xClaw02/sdk-python/xclaw02/: __init__.py  cli.py  errors.py  payee.py  payer.py  signer.py  utils.py  wallet.py
openclaw/xClaw02/sdk-python/xclaw02/testing/: __init__.py  fixtures.py  mock_facilitator.py  test_payment.py
openclaw/xClaw02/sdk-typescript/: README.md  cli.js  errors.js  index.d.ts  index.js  package-lock.json  package.json  payee.js  payer.js  signer.js  testing.js  utils.js  wallet.js
openclaw/xClaw02/sdk-typescript/examples/: basic-payment.js
openclaw/xClaw02/sdk-typescript/testing/: fixtures.js  mock-facilitator.js  test-payment.js
openclaw/xClaw02/sdk-typescript/tests/: payer.test.js
sdk/: README.md  index.d.ts  index.js  package-lock.json  package.json  payee.js  payer.js  signer.js  testing.js  utils.js
sdk-python/: .gitignore  README.md  pyproject.toml
sdk-python/primer_x402/: __init__.py  payee.py  payer.py  utils.py
sdk-python/tests/: __init__.py  test_payee.py  test_payer.py  test_signer.py  test_testing.py  test_utils.py
sdk-python/x402_python/: __init__.py  payee.py  payer.py  signer.py  utils.py
sdk-python/x402_python/testing/: __init__.py  fixtures.py  mock_facilitator.py  test_payment.py
sdk-typescript/: LICENSE  README.md  cli.js  errors.js  index.d.ts  index.js  package-lock.json  package.json  payee.js  payer.js  signer.js  utils.js  wallet.js
sdk-typescript/testing/: fixtures.js  mock-facilitator.js  test-payment.js
sdk-typescript/tests/: payee.test.js  signer.test.js  testing.test.js  utils.test.js
sdk/examples/: basic-payment.js
sdk/testing/: fixtures.js  mock-facilitator.js  test-payment.js
sdk/tests/: payee.test.js  payer.test.js  signer.test.js  testing.test.js  utils.test.js
tools/: approve.env.example  approve.js  signer.env.example  signer.js  test.js
